--- a/5-month/Lesson 11/app/package.json
+++ b/5-month/Lesson 11/app/package.json
@@ -9,8 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
